<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ka.fh.crowder.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/register_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/register_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/register_username"
        android:hint="@string/register_password"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password_again"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:hint="@string/register_password_again" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_city"
        android:layout_below="@+id/register_password_again"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/register_city" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_nation"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="@string/register_nation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_submit"
        android:id="@+id/register_submit"
        android:layout_below="@+id/register_nation"
        android:layout_alignEnd="@+id/register_nation"
        android:layout_marginTop="20dp" />

</RelativeLayout>
