<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ka.fh.crowder.NewProjectActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_project_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/prompt_project_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/new_project_description"
        android:layout_below="@+id/new_project_name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/new_project_name"
        android:hint="@string/prompt_project_description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_project_budget"
        android:layout_below="@+id/new_project_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_project_budget" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/new_project_date"
        android:layout_below="@+id/new_project_budget"
        android:layout_alignParentStart="true"
        android:hint="@string/prompt_project_date"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project_create"
        android:id="@+id/new_project_create"
        android:layout_below="@+id/new_project_date"
        android:layout_alignEnd="@+id/new_project_description"
        android:layout_marginTop="20dp" />

</RelativeLayout>
